--- a/hook_dll/hook_dll.vcxproj.filters
+++ b/hook_dll/hook_dll.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="InlineHook.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
